--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
-    margin: 0;
+    margin: 0 ;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -12,9 +12,10 @@ body {
     color: #F9FaF8;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: 0px;
+    padding: 0 200px;
     font-size: 24px;
 }
 
@@ -36,7 +37,8 @@ a {
 
 .herocont{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 75px 200px;
 }
 
 .hero{
