--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
     display: flex;
     flex-direction: column;
-    align-content: center;
     margin: 0 ;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -12,9 +11,11 @@ body {
     color: #F9FaF8;
     display: flex;
     flex-direction: row;
+/* Makes Logo, Links, Hero section and others touch the edge of their flexboxes */
     justify-content: space-between;
     align-items: center;
     margin: 0px;
+/* centering method for website used due to consistency */     
     padding: 0 200px;
     font-size: 24px;
 }
@@ -24,24 +25,67 @@ ul{
     gap: 14px;
 }
 
+
+
 li,
 .secondarytext {
+/* gets rid of bullets in the list */
     list-style-type: none;
     font-size: 18px;
+
 }
 
+
 a {
+/* gets rid of underline for links */
     text-decoration: none;
     color: #E5E7EB;
 }
 
+
 .herocont{
     display: flex;
     justify-content: space-between;
-    padding: 75px 200px;
+/* centering method for website used due to consistency */    
+    padding: 75px 200px 50px;
+    flex-wrap: wrap;
 }
 
 .hero{
-
-    flex-flow: wrap;
+    display: flex;
+    width: 50%;
+    flex-flow: row wrap;
 }
+
+.maintext{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FaF8;
+    
+}
+
+
+.hero button{
+    display: block;
+    background-color: #3882F6;
+    color: #F9FaF8;
+    padding: 8px 30px;
+    border-radius: 5px;
+    border: 0;
+    font-weight: bold;
+    font-size: 16px;
+    margin: 12px 0;
+}
+
+.imagecont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: auto;
+    
+}
+
+img {
+    height: 300px;
+}   
+
