--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     display: flex;
+/* Makes the sections divided from top to bottom and stretches from left to right */ 
     flex-direction: column;
+/* Erases default white border aroudn entire website */
     margin: 0 ;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -52,6 +54,7 @@ a {
 
 .hero{
     display: flex;
+/* makes width smaller using a % of the space available */
     width: 35%;
     flex-flow: row wrap;
 }
@@ -64,11 +67,14 @@ a {
 }
 
 .hero button{
+/* gives the button its own Line */
     display: block;
     background-color: #3882F6;
     color: #F9FaF8;
     padding: 8px 30px;
+/* rounds out the edges of the button depending on the value */
     border-radius: 5px;
+/* gets rid of grey border around button */
     border: 0;
     font-weight: bold;
     font-size: 16px;
@@ -77,20 +83,15 @@ a {
 
 .imagecont {
   display: flex;
-  justify-content: center;
-  align-content: center;
   width: auto;
-    
+  height: 300px;
 }
-
-.imagecont {
-    height: 300px;
-}   
 
 .info {
     display: flex;
     justify-content: center;
     text-align: center;
+/* Changed width centering to be aligned with only quote section */
     padding: 50px 400px 100px;
     flex-flow: column;
 }
@@ -107,13 +108,23 @@ a {
     justify-content: center;
     align-items: center;
     gap: 25px;
-    
-
 }
 
 .info img {
+/* made images smaller height wise in this section */
     height: 200px;
 }
 
+.quotes {
+    background-color: #E5E7EB;
+    font-size: 36px;
+    color: #1F2937;
+    padding: 100px 400px 100px;
+}
 
-
+.quotespeaker{
+    display: flex;
+    font-weight: bold;
+    font-size: 20px;
+    justify-content: flex-end;
+}
