--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 .header,
-.herocont {
+.herocont,
+.footer {
     background-color: #1F2937;
     color: #F9FaF8;
     display: flex;
@@ -166,4 +167,11 @@ a {
     border-radius: 6px;
     padding: 8px 30px;
     height: fit-content;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    font-size: 18px;
 }
